--- a/src/components/GameList.css
+++ b/src/components/GameList.css
@@ -15,17 +15,28 @@
   display: none;
 }
 
+.alert-box {
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
 .vote-box-small {
   position: relative;
   display: flex;
+  width: 100%;
+  box-sizing: border-box;
   border-radius: 50px;
   padding: 1rem;
   align-items: center;
   background-color: #83e6e6;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .vote-box-info-small {
+  flex: 1;
+  text-align: center;
   color: rgb(255, 255, 255);
   font-size: 1.25rem;
   font-weight: bold;
@@ -63,7 +74,7 @@
 
 .game-list {
   list-style: none;
-  padding: 0 0 10rem 0;
+  padding: 0 0 15rem 0;
   margin: 0;
   display: flex;
   flex-direction: column;
